--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.16.7",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.1.1",
     "@unform/core": "^2.1.6",
     "axios": "^0.25.0",
     "dva": "^2.4.1",
@@ -26,7 +30,8 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.26.0",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
@@ -38,11 +43,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
     "@types/qs": "^6.9.7",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-redux": "^5.0.6",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "babel": {
+    "presets": [
+      "babel-preset-expo"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
+  }
 }
